iowow (1.4.14) UNRELEASED; urgency=medium

  * Moved some useful defs from iwutil.h into basedefs.h
  * Fixed iwre_match() function signatute allowing `const  char* input`
  (iwre.h)
  * Added lightweight regexp implementation (iwre.h)
  * Added `size_t iwxstr_asize(IWXSTR*)` (iwxstr.h)
  * Added locale independed strtod: iwstrtod() (iwconv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 21 Oct 2021 19:09:35 +0700

iowow (1.4.13) testing; urgency=medium

  * Fixed SEGV in iwkv_cursor_open with zero-length key and IWDB_VNUM64_KEYS (#42)
  * Fixed Heap UAF in iwkv_close after invoking iwkv_db_set_meta on a database (#41)
  * Added `iwxstr_wrap()` (iwxstr.h)
  * Added `RCT()` checker for pthread routines (basedefs.h)
  * Added iwbin2hex() (iwconv.h)
  * iwxstr_clear() sets value of intgernal string buffer to zero (iwxstr.h)
  * Added user data store capability to iwxstr (iwxstr.h)
  * Added iwpool_strdup2(), iwpool_strndup2() (iwpool.h)
  * Added iwp_set_current_thread_name() (iwp.h)
  * Added RCENO define (basedefs.h)
  * Thread poll, single thread worker fixes
  * Added IW_MIN, IW_MAX, IW_XSTR defines

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 03 Sep 2021 16:03:05 +0700

iowow (1.4.12) testing; urgency=medium

  * Added IW_ERROR_UNSUPPORTED error code
  * Added  IW_ALLOC __attribute__((malloc)) optimization
  * Added ring buffer implementation (iwrb.h)
  * Added `queue_blocking` argument `iwstw_start()` (iwstw.h)
  * Minor changes in iwlog.h api
  * `memcpy` replaced by `memmove` for overlaping cases (iwarr.c)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 19 Jul 2021 10:09:05 +0700

iowow (1.4.11) testing; urgency=medium

  * Fixed typo (qsort_r => sort_r) (iwarr.c)
  * Added simple threads pool implementation (iwtp.h)
  * Added IW_ERROR_NOT_ALLOWED error code (iwlog.h)
  * Added RCR() error checking macro (basedefs.h)
  * Added iwlist_sort(), iwulist_sort() (iwarr.h)
  * Added iwstw_schedule_empty_only() (iwstw.h)
  * Added iwstw_queue_size() (iwstw.h)